--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
     "ostream": "cpp",
     "*.tcc": "cpp",
     "iomanip": "cpp",
-    "sstream": "cpp"
+    "sstream": "cpp",
+    "array": "cpp",
+    "string_view": "cpp"
   }
 }
