--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
     "iomanip": "cpp",
     "sstream": "cpp",
     "array": "cpp",
-    "string_view": "cpp"
+    "string_view": "cpp",
+    "deque": "cpp",
+    "vector": "cpp"
   }
 }
